# PyMark

./: .pylintrc  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: lint.yml  unit-test.yml
src/: main.py
src/helpers/: file.py  image.py  util.py
tests/image/: test_get_watermark_size.py
tests/util/: file_spec.py
